--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,16 @@
 */
 
 /* ========================= layout ======================== */
+html, body, .cover {
+	height: 100%;
+}
 
 body {
 	background: url('../img/cover.png'),
 				url('../img/noise.png'),
 				linear-gradient(50deg,#ff4169,#7c26f8);
 	background-attachment: fixed;
+	font-family: Helvetica,Arial,sans-serif;
 }
 
 /* -- Barra de navegação -- */
@@ -47,7 +51,53 @@ nav.navbar-transparente {
 .navbar-inverse .navbar-nav>li>a:hover {
 	color: #9bf0e1;
 }
-/* -- Capa --*/
 
+/* -- Capa --*/
+.cover {
+	display: table;
+	width: 100%;
+}
+
+.cover-text {
+	text-align: center;
+	color: white;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+/* -- Botões --*/
+.btn-custom {
+	color: white;
+	border-radius: 500px;
+	-webkit-border-radius: 500px;
+	-moz-border-radius: 500px;
+	padding: 10px 35px;
+	margin: 0 15px;
+	text-transform: uppercase;
+	transition: background 0.4s, color 0.4s;
+}
+
+.btn-purple {
+	background: #7c25f8;
+}
+.btn-purple:hover {
+	background: #6207e3;
+	color: white;
+}
+
+.btn-white {
+	border: 2px solid white;
+}
+.btn-white:hover {
+	border: 2px solid white;
+	background: white;
+	color: black;
+}
 
 /* ========================= Tipografia ======================== */
+h1 {
+	font-size: 100px;
+	font-weight: 900;
+	letter-spacing: -0.05em;
+	margin-bottom: 50px;
+}
