--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,36 @@ nav.navbar-transparente {
 	color: black;
 }
 
+/* -- Conteúdos --*/
+#servicos {
+	background: white;
+	padding: 20px 0;
+}
+.albuns {
+	padding: 10px 0;
+}
+
 /* ========================= Tipografia ======================== */
 h1 {
 	font-size: 100px;
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
+	color: white;
+}
+
+h2 {
+	font-size: 50px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+h3 {
+	font-size: 35px;
+	font-weight: 700;
+	letter-spacing: -0.04em;
+}
+
+#servicos h2, #servicos h3 {
+	color: #7c25f8;
 }
