--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,13 @@ nav.navbar-transparente {
 	margin: 16px 10px;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav>li>a, footer .nav a {
 	color: white;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav>li>a:hover, footer .nav a:hover {
 	color: #9bf0e1;
+	background: none;
 }
 
 /* -- Capa --*/
@@ -109,13 +110,23 @@ nav.navbar-transparente {
 	padding: 20px 0;
 	color: white;
 }
-
 .rotacionar-iphones {
 	transform: rotate(30deg);
 	-moz-transform: rotate(30deg);
 	-webkit-transform: rotate(30deg);
 	-ms-transform: rotate(30deg);
 	padding-left: 80px;
+}
+
+/* -- Rodapé --*/
+footer {
+	background: #000;
+	padding: 50px 0px 20px 0px;
+	position: relative;
+}
+
+.item-rede-social {
+	float: right;
 }
 
 /* ========================= Tipografia ======================== */
@@ -137,6 +148,12 @@ h3 {
 	font-size: 35px;
 	font-weight: 700;
 	letter-spacing: -0.04em;
+}
+
+footer h4 {
+	color: #919496;
+	font-size: 12px;
+	text-transform: uppercase;
 }
 
 #servicos h2, #servicos h3 {
