--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 /* ========================= layout ======================== */
 html, body, .cover {
 	height: 100%;
+	overflow: visible;
 }
 
 body {
@@ -131,7 +132,6 @@ footer {
 
 /* ========================= Tipografia ======================== */
 h1 {
-	font-size: 100px;
 	font-weight: 900;
 	letter-spacing: -0.05em;
 	margin-bottom: 50px;
@@ -162,4 +162,36 @@ footer h4 {
 
 #recursos h3 {
 	color: #9bf0e1;
+}
+
+/* -- Media Queries --*/
+	/* xs < 768 */
+@media screen and (max-width: 767px) {
+	h1 {
+		font-size: 50px;
+	}
+	.btn-custom {
+		margin: 10px 15px;
+	}
+	html, body, .cover {
+		overflow: scroll;
+	}
+}
+	/* sm */
+@media screen and (min-width: 768px) {
+	h1 {
+		font-size: 70px;
+	}
+}
+	/* md */
+@media screen and (min-width: 992px) {
+	h1 {
+		font-size: 80px;
+	}
+}
+	/* md */
+@media screen and (min-width: 1200px) {
+	h1 {
+		font-size: 100px;
+	}
 }
